# basespace-dl

./: .gitignore  .snapcraft.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  appveyor.yml  justfile
HomebrewFormula/: basespace-dl.rb
ci/: before_deploy.ps1  before_deploy.sh  install.sh
docs/: cookbook.md
pkg/brew/: basespace-dl.rb
src/: api.rs  lib.rs  main.rs  pretty_err.rs  shell.rs  util.rs  workspace.rs
tests/: test.rs
