[package]
name = "basespace-dl"
version = "0.3.1"
authors = ["dweb0"]
description = "Multi-account basespace file downloader"
homepage = "https://github.com/dweb0/basespace-dl"
repository = "https://github.com/dweb0/basespace-dl"
readme = "README.md"
keywords = ["bioinformatics", "download", "downloader", "basespace"]
categories = ["command-line-interface"]
license = "MIT/Apache-2.0"
edition = "2018"
exclude = [
    "./.travis.yml", "./appveyor.yml", "./.snapcraft.yaml",
    "/build/*", "./screencast.svg", "/tests/*"
]

[badges]
travis-ci = { repository = "dweb0/basespace-dl" }
appveyor = { repository = "dweb0/basespace-dl", service = "github" }

[[bin]]
name = "basespace-dl"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
regex = "1.3.1"
dirs = "2.0.2"
toml = "0.5.3"
failure = "0.1.6"
console = "0.9.0"
text_io = "0.1.7"
md5 = "0.6.1"
env_logger = "0.7.0"
log = "0.4.8"
indicatif = "0.12.0"
strsim = "0.9.2"
serde_struct_wrapper = "0.3.2"
reqwest = { version = "0.10.0-alpha.2", features = ["json", "blocking"] }
serde = { version = "1.0.101", features = ["derive"] }
futures = { version = "0.3.0-alpha.19", features = ["async-await"] }
tokio = "0.2.0-alpha.6"
rayon = "1.2.1"
tabwriter = "1.1.0"
crossbeam-channel = "0.4.0"
number_prefix = "0.3.0"
