[package]
name = "basespace-dl"
version = "0.4.1"
authors = ["dweb0"]
description = "Multi-account basespace file downloader"
homepage = "https://github.com/dweb0/basespace-dl"
repository = "https://github.com/dweb0/basespace-dl"
readme = "README.md"
keywords = ["bioinformatics", "download", "downloader", "basespace"]
categories = ["command-line-interface"]
license = "MIT/Apache-2.0"
edition = "2018"
exclude = [
    "./.travis.yml", "./appveyor.yml", "./.snapcraft.yaml",
    "/build/*", "./screencast.svg", "/tests/*", "/docs/*"
]

[badges]
travis-ci = { repository = "dweb0/basespace-dl" }
appveyor = { repository = "dweb0/basespace-dl", service = "github" }

[[bin]]
name = "basespace-dl"
path = "src/main.rs"

[dependencies]
clap = "2.33.1"
regex = "1.3.9"
dirs = "2.0.2"
toml = "0.5.6"
failure = "0.1.8"
console = "0.11.3"
text_io = "0.1.8"
md5 = "0.7.0"
env_logger = "0.7.1"
log = "0.4.8"
indicatif = "0.14.0"
strsim = "0.10.0"
serde_struct_wrapper = "0.3.2"
reqwest = { version = "0.10.6", features = ["json", "blocking"] }
serde = { version = "1.0.111", features = ["derive"] }
futures = "0.3.5"
tokio = { version = "1.8.4", features = ["full"] }
rayon = "1.3.0"
tabwriter = "1.2.1"
crossbeam-channel = "0.4.4"
number_prefix = "0.3.0"
