[package]
name = "basespace-dl"
version = "0.5.0"
authors = ["dweb0"]
description = "Multi-account basespace file downloader"
homepage = "https://github.com/dweb0/basespace-dl"
repository = "https://github.com/dweb0/basespace-dl"
readme = "README.md"
keywords = ["bioinformatics", "download", "downloader", "basespace"]
categories = ["command-line-interface"]
license = "MIT/Apache-2.0"
edition = "2018"
exclude = [
    "./.travis.yml", "./appveyor.yml", "./.snapcraft.yaml",
    "/build/*", "./screencast.svg", "/tests/*", "/docs/*"
]

[badges]
travis-ci = { repository = "dweb0/basespace-dl" }
appveyor = { repository = "dweb0/basespace-dl", service = "github" }

[[bin]]
name = "basespace-dl"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
regex = "1.5.4"
dirs = "3.0.2"
toml = "0.5.8"
failure = "0.1.8"
console = "0.14.1"
text_io = "0.1.8"
md5 = "0.7.0"
env_logger = "0.8.4"
log = "0.4.14"
indicatif = "0.16.2"
strsim = "0.10.0"
serde_struct_wrapper = "0.3.2"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
futures = "0.3.15"
tokio = { version = "1.7.1", features = ["full"] }
rayon = "1.5.1"
tabwriter = "1.2.1"
crossbeam-channel = "0.5.1"
number_prefix = "0.4.0"
